Fixed mobile layout issue on homepage

--- a/static/styles.css
+++ b/static/styles.css
@@ -7,11 +7,11 @@ body {
     background-color: beige;
 }
 
-.brand-primary-button {
+.btn-primary {
     background-color: #ee885b;
     color:white;
 }
 
-.brand-primary-button {
+.brand-primary:hover {
     background-color: #ea6461;
 }
